--- a/src/templates/blast.html
+++ b/src/templates/blast.html
@@ -1,5 +1,7 @@
 <div class="container-fluid">
 
+    <p class="alert alert-warning">This doesnt work yet - Jason. </p>
+
   <form id="blastForm">
     <div class="form-group">
       <label>Subject</label>
