--- a/src/templates/blast.html
+++ b/src/templates/blast.html
@@ -28,9 +28,9 @@
         <div class="col-md-6">
           <label>Example:</label>
 
-<pre>jason@protonmail.ch
-andy@protonmail.com
-dcl@protonmail.ch
+<pre>jason
+andy
+dcl
 </pre>
 
         </div>    
