--- a/src/templates/blast.html
+++ b/src/templates/blast.html
@@ -22,7 +22,7 @@
     <div class="form-group">
       <div class="row">
         <div class="col-md-6">            
-          <label>Email List:</label>
+          <label>Username List:</label>
           <textarea class="form-control" ng-style="{'height':'20rem'}" ng-model="blastList"></textarea>
         </div>
         <div class="col-md-6">
