--- a/src/templates/blast.html
+++ b/src/templates/blast.html
@@ -38,7 +38,7 @@ dcl
     </div>
     <p>
       <button type="submit" class="btn btn-primary">Blast to List</button>
-      <button type="button" disabled class="btn btn-danger pull-right" ng-click="open('lg')">Blast to All [disabled for now]</button>
+      <button type="button" disabled class="btn btn-danger pull-right" ng-click="open('lg')">Blast to All EXCEPT List</button>
     </p>
 
     <pre>{{ blastData }}</pre>  
