--- a/src/templates/blast.html
+++ b/src/templates/blast.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-  <form id="blastForm" name="blastForm" ng-submit="blast()">
+  <form method="POST" id="blastForm" name="blastForm" ng-submit="blast()">
 
 
     <div class="alert" ng-class="{ 'alert-info': !blastMode, 'alert-warning': blastMode }">
